Update and rename 1.0 Initial Setup to 1.0 Initial Setup.md

--- a/1.0 Initial Setup.md
+++ b/1.0 Initial Setup.md
@@ -1,3 +1,4 @@
+# 1.0 Initial Setup
 Throughout this process I will, naturally, seek inspiration form various sources. Sometimes actual software projects and repos, but I suspect inspiration will also present itself in many other forms.
 My first source will be npmaile's blog post [How to get into software](https://github.com/npmaile/blog/blob/main/posts/2.%20How%20to%20get%20into%20software.md).
 
