Update 1.0 Initial Setup.md

--- a/1.0 Initial Setup.md
+++ b/1.0 Initial Setup.md
@@ -3,7 +3,7 @@ Throughout this process I will, naturally, seek inspiration form various sources
 My first source will be npmaile's blog post [How to get into software](https://github.com/npmaile/blog/blob/main/posts/2.%20How%20to%20get%20into%20software.md).
 
 Some of Nate's recommendations I will follow verbatim. Some, I will modify to suit my own needs. 
-I believe a healthy balance between *monkey see, monkey do* and uhm... *monkey see, monkey experiment* will serve me well. Sure, sometimes just do the thing, as told, and pay attention. But I need to put my own ideas into this endeavor and learn through failure.
+I believe a healthy balance between *monkey see, monkey do* and uhm... *monkey see, monkey experiment* will serve me well. Sure, sometimes just do the thing, as told, and pay attention. But I also need to put my own ideas into this endeavor and learn through failure.
 Otherwise, what's the point?
 
 Anyhow, here's where I'm at:
