Update 1.0 Initial Setup.md

--- a/1.0 Initial Setup.md
+++ b/1.0 Initial Setup.md
@@ -11,6 +11,7 @@ Anyhow, here's where I'm at:
 - I'm backing up all data and Windows configuration on my main computer. Which is turning out to be a pain in the butt.
 - Once that's done, I will be installing Arch Linux on that computer.
 - I am already going through [Learn Linux TV's Bash Scripting tutorial](https://youtu.be/2733cRPudvI?si=9q1dN5ho2ijCFg2f). I'd like to be a bit more familiar with the Linux shell, so I should finish that tutorial.
+- NeoVim seems about right for me, and I'll try sticking with it barring any major roadblocks preventing me from learning actual coding.
 - Then I will move on to [Automate the Boring Stuff](https://automatetheboringstuff.com/).
 
 I am not totally sure about how to structure these posts. I need to decide, if the above points should be documented as separate posts or as updates on this one.
