Update 1.1 Nuking stuff.md
Added section 'Installing Arch'

--- a/1.1 Nuking stuff.md
+++ b/1.1 Nuking stuff.md
@@ -9,3 +9,13 @@ To be sure, this is due to my own lack of knowledge, but sometimes I just want t
 In any case, I eventually learned that the Arch Wiki had exactly the instructions I needed. I have a blinking cursor on my screen. 
 
 Root awaits.
+
+## Installing Arch
+Installing Arch Linux by following a [friendly guide](https://www.youtube.com/watch?v=FxeriGuJKTM) was actually not too bad.
+
+Setting up partitions and bootloaders was obscure, but logical. A matter of defining where basic parts of the system belong, instructing the computer on how to read these definitions and installing and enabling necessary drivers, tools and some basic software.
+Even if I'm only following along, it's quite satisfying seeing how my keystrokes result in the gradual creation of a functional system.
+
+I followed Jay's steps almost exactly, though I opted out of Gnome and GDM in favor of XFCE and LightDM. But now I have Arch installed!
+
+Too bad I don't remember what I set as my LVM passphrase.
