Update 1.1 Nuking stuff.md

--- a/1.1 Nuking stuff.md
+++ b/1.1 Nuking stuff.md
@@ -1,3 +1,5 @@
+>In which I attempt to achieve "Arch btw..."
+
 My Windows install has been succesfully been kicked off my main computer. I think I have secure backups of all my files & software and their various customizations. I'll find out later. Onwards.
 
 Right now I have no Windows system to create a bootable USB drive. Meaning no Rufus. Meaning I am officially out of my depth. 
@@ -19,3 +21,16 @@ Even if I'm only following along, it's quite satisfying seeing how my keystrokes
 I followed Jay's steps almost exactly, though I opted out of Gnome and GDM in favor of XFCE and LightDM. But now I have Arch installed!
 
 Too bad I don't remember what I set as my LVM passphrase.
+
+## Teachers & Guides
+Jay from Learn Linux TV is obviously a very talented teacher. But as far as his Arch installation tutorial goes, I think it lacks a level, or maybe two levels, of complexity.
+
+He demonstrates the archinstall method and the manual install method. He also goes through disk partitioning and LVM setup and even makes a point of installing the Linux LTS kernel to ensure that those following along have the opportunity to add a layer of stability to their system. All told, my guess is that his tutorial is very useful to many people who just want to install Arch as simply as possible without using an Arch-based distro. Trouble is, there is a huge difference between *many people* and *everyone*. I am not an American (check it out Æ Ø Å), so I was hampered by having to double check my commands. It's probably also why I typed a messed-up passphrase for the LVM encryption. Also, I won't be using Gnome. No thank you. I enjoy XFCE, which means I'll be using LightDM as my desktop manager. Now Jay's tutorial does not mention other desktop environments or managers. It does not mention that LightDM may load before your graphics driver is loaded. Or that there may be some configuration you need to perform depending on your hardware... Yes, I messed up my second attempt too. The monkey who experiments can not rely on the most obvious and straight forward guides. Monkey must not stop at seeing. Monkey must study.
+
+So I turned to the actual manual. The Arch wiki, which countains a bounty of information. In fact, it contains a hoard of information. An outright avalance of rules, guidelines, recommendations, warnings, conditions, no-no's, must-haves, did-you-remember-that's, have-you-checked-this' and links upon links of configuration files you need to check, packages you need to install and learn how to use, commands you ought to already be familiar with. It's a lot.
+
+And sure, this is a skill issue. Eventually I will be able to RTFM without complaining. But please let it be said: The Arch wiki is not a user manual or guide. It is a reference manual. It may have steps to follow, but it is written under the assumption that the reader already knows what everything means. Hence, the installation guides' section on partioning states: "Use a partitioning tool like fdisk to modify partition tables."
+
+Do me a favor and look up a cooking recipe. Any dish. Now tell me, does it use statements like "Use a source of heat like an an oven to cook the lasagna". Does it say "Use a cutting tool like a knife to carve the turkey". Can we at least agree that this equates to "... draw the rest of the owl"?
+
+Enough griping. I'm currently on part 2 of Mischa van den Burg's [much more thorough walkthrough on setting up Arch Linux](https://youtu.be/cpoHedIhjWc?si=9uTZeSKECtpISKnq).
