Update 1.1 Nuking stuff.md

--- a/1.1 Nuking stuff.md
+++ b/1.1 Nuking stuff.md
@@ -34,3 +34,10 @@ And sure, this is a skill issue. Eventually I will be able to RTFM without compl
 Do me a favor and look up a cooking recipe. Any dish. Now tell me, does it use statements like "Use a source of heat like an an oven to cook the lasagna". Does it say "Use a cutting tool like a knife to carve the turkey". Can we at least agree that this equates to "... draw the rest of the owl"?
 
 Enough griping. I'm currently on part 2 of Mischa van den Burg's [much more thorough walkthrough on setting up Arch Linux](https://youtu.be/cpoHedIhjWc?si=9uTZeSKECtpISKnq).
+
+## Monkey do usual way
+A few hours yesterday evening and about five hours today will have to do for now. I obviously need to improve some skills before I am ready to run Arch. Honestly this suits me. At present I feel quite at home in Debian stable. It may be a spiritual nursing home, but right now it's the thing that allows me to forge ahead. At some later date, I can start training Arch installs on virtual machines, build my understanding of partioning, encryption and managing a bootloader. Today, October 27th 2024, the important thing is that I increased my knowledge of these concepts and identified some weaknesses in how i work. Specifically:
+- I need to be more patient and read documentation more slowly.
+- I need to be more mindful of the choices I make and I ESPECIALLY need to take notes on what I'm doing.
+
+I've also found Mischa van den Burg, who seems to be a very good teacher for those who want to be exposed to troubleshooting, instead of just being presented with a prepared solution. Today counts as a positive failure.
