Update 1.1 Nuking stuff.md

--- a/1.1 Nuking stuff.md
+++ b/1.1 Nuking stuff.md
@@ -41,3 +41,5 @@ A few hours yesterday evening and about five hours today will have to do for now
 - I need to be more mindful of the choices I make and I ESPECIALLY need to take notes on what I'm doing.
 
 I've also found Mischa van den Burg, who seems to be a very good teacher for those who want to be exposed to troubleshooting, instead of just being presented with a prepared solution. Today counts as a positive failure.
+
+UPDATE: Debian currently does not support my WiFi module. Guess I'm going with Arch. Still a positive failure.
